...

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnMovieDetailBack"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
...

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBookDetailSearch"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
...

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBookDetailAddToLibrary"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
...

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBookDetailMore"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
...

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookDetailAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookDetailReleasedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/llReviewAndRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/llBookType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <LinearLayout
                android:id="@+id/llPageCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/layoutBookDetailAboutBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookDetailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/layoutBookDetailRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookDetailRatingLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rbBookDetailRating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
...

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookDetailReviewCountLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/layoutFiveStarRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutFourStarRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutThreeStarRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutTwoStarRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutOneStarRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBookDetailComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

        <LinearLayout
            android:id="@+id/layoutBookDetailAboutAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookDetailAboutAuthorDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/layoutBookDetailRefund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/layoutBookDetailVAT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
