...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_medium_2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Sci-fi and fantasy ebooks"
            android:textSize="@dimen/text_regular_2x_medium"
            android:textStyle="bold" />
...
            app:srcCompat="@drawable/ic_arrow_right"
            app:tint="@color/primary_blue" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBooksFromBookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium_2"
        android:clipToPadding="false"
        android:layout_below="@id/layoutMoreBook"
...
