<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/vpHomeSearch"
                layout="@layout/view_pod_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2" />

            <alirezat775.lib.carouselview.CarouselView
                android:id="@+id/rvRecentBooks"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_below="@id/vpHomeSearch"
                android:layout_marginVertical="@dimen/margin_large"
                app:reverseLayout="true" />

            <include
                android:id="@+id/layoutEmptyRecentList"
                layout="@layout/view_empty_recent_list"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:visibility="gone"
                android:layout_alignTop="@id/rvRecentBooks"
                android:layout_alignBottom="@id/rvRecentBooks"/>

            <include
                android:id="@+id/vpBookTypeHome"
                layout="@layout/view_pod_book_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvRecentBooks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBookList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/vpBookTypeHome"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="12"
                tools:listitem="@layout/view_holder_book_list" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>